--- a/templates/vhost/vhost_location_stub_status.erb
+++ b/templates/vhost/vhost_location_stub_status.erb
@@ -1,3 +1,6 @@
   location <%= location %> {
+    <% custom_config.each do |key,value| -%>
+    <%= key %> = <%= value %>;
+    <% end -%>
     stub_status on;
   }
