--- a/templates/vhost/vhost_location_stub_status.erb
+++ b/templates/vhost/vhost_location_stub_status.erb
@@ -1,5 +1,5 @@
   location <%= location %> {
-    <% if ( scope.function_is_hash(custom_config) ) -%>
+    <% if ( custom_config != false ) -%>
       <% custom_config.each do |key,value| -%>
       <%= key %> = <%= value %>;
       <% end -%>
