--- a/templates/vhost/vhost_location_stub_status.erb
+++ b/templates/vhost/vhost_location_stub_status.erb
@@ -1,6 +1,17 @@
   location <%= location %> {
-      <% custom_config.each do |key,value| -%>
-      <%= key %> = <%= value %>;
-      <% end -%>
+    Debugging:
+-------------------------
+    <% if ( custom_config != 'undef' ) -%> custom_config != 'undef' <% else %> custom_config == 'undef' <% end -%>
+-------------------------
+    <% if ( scope.function_is_string( location ) ) %>location is string<% else %>location is not a string<% end %>
+-------------------------
+    <% if custom_config %>custom_config exist!<% else %>custom_config does not exist!<% end %>
+-------------------------
+    <% if scope.lookupvar("custom_config") %>custom_config exist on lookupvar!<% else %>custom_config does not exist on lookupvar!<% end %>
+-------------------------      
+    custom_config='<%= custom_config %>'
+-------------------------
+    <% if scope.lookupvar("custom_config").length > 0 %>custom_config is > 0<% else %>custom_config does not exist<% end %>
+--------------------------
     stub_status on;
   }
