Added support for custom configs

--- a/templates/vhost/vhost_location_stub_status.erb
+++ b/templates/vhost/vhost_location_stub_status.erb
@@ -1,4 +1,6 @@
   location <%= location %> {
-    <% if @custom_config -%><% custom_config.each do |key,value| -%><%= key %> = <%= value %>;<% end %><% end -%>
+    <% if @custom_config -%>
+      <% custom_config.each do |key,value| %><%= key %> = <%= value %>;<% end %>
+    <% end -%>
     stub_status on;
   }
