Added support for custom configs

--- a/templates/vhost/vhost_location_stub_status.erb
+++ b/templates/vhost/vhost_location_stub_status.erb
@@ -2,12 +2,12 @@
 <% if @custom_config_prepend -%>
   <% custom_config_prepend.each do |key,value| %>
     <%= key %> = <%= value %>;
-  <% end %>
+  <% end -%>
 <% end -%>
     stub_status on;
 <% if @custom_config_append -%>
   <% custom_config_append.each do |key,value| %>
     <%= key %> = <%= value %>;
-  <% end %>
+  <% end -%>
 <% end -%>
   }
