--- a/templates/vhost/vhost_location_directory.erb
+++ b/templates/vhost/vhost_location_directory.erb
@@ -2,13 +2,13 @@
 <% if @custom_config_prepend -%>
   <% custom_config_prepend.each do |key,value| %>
     <%= key %> = <%= value %>;
-  <% end %>
+  <% end -%>
 <% end -%>
     root  <%= www_root %>;
     index <% index_files.each do |i| %> <%= i %> <% end %>; 
 <% if @custom_config_append -%>
   <% custom_config_append.each do |key,value| %>
     <%= key %> = <%= value %>;
-  <% end %>
+  <% end -%>
 <% end -%>
   }
