--- a/templates/vhost/vhost_location_proxy.erb
+++ b/templates/vhost/vhost_location_proxy.erb
@@ -2,14 +2,14 @@
 <% if @custom_config_prepend -%>
   <% custom_config_prepend.each do |key,value| %>
     <%= key %> = <%= value %>;
-  <% end %>
+  <% end -%>
 <% end -%>
     proxy_pass <%= proxy %>;
     proxy_read_timeout <%= proxy_read_timeout %>;
 <% if @custom_config_append -%>
   <% custom_config_append.each do |key,value| %>
     <%= key %> = <%= value %>;
-  <% end %>
+  <% end -%>
 <% end -%>
   }
 
