--- a/templates/vhost/vhost_location_alias.erb
+++ b/templates/vhost/vhost_location_alias.erb
@@ -1,12 +1,12 @@
   location <%= location %> {
 <% if @custom_config_prepend -%>
-  <% custom_config_prepend.each do |key,value| %>
+  <% custom_config_prepend.each do |key,value| -%>
     <%= key %> <%= value %>;
   <% end -%>
 <% end -%>
     alias  <%= location_alias %>;
 <% if @custom_config_append -%>
-  <% custom_config_append.each do |key,value| %>
+  <% custom_config_append.each do |key,value| -%>
     <%= key %> <%= value %>;
   <% end -%>
 <% end -%>
