--- a/templates/vhost/vhost_location_stub_status.erb
+++ b/templates/vhost/vhost_location_stub_status.erb
@@ -6,6 +6,8 @@
 <% end -%>
     stub_status on;
 <% if @custom_config_append -%>
-  <% custom_config_append.each do |key,value| %><%= key %> <%= value %>;<% end %>
+  <% custom_config_append.each do |key,value| %>
+    <%= key %> <%= value %>;
+  <% end -%>
 <% end -%>
   }
