--- a/templates/vhost/vhost_location_stub_status.erb
+++ b/templates/vhost/vhost_location_stub_status.erb
@@ -5,9 +5,7 @@
   <% end -%>
 <% end -%>
     stub_status on;
-<% if @custom_config_append -%>
-  <% custom_config_append.each do |key,value| -%>
+<% if @custom_config_append -%><% custom_config_append.each do |key,value| -%>
     <%= key %> <%= value %>;
-  <% end -%>
-<% end -%>
+<% end -%><% end -%>
   }
