--- a/templates/vhost/vhost_location_alias.erb
+++ b/templates/vhost/vhost_location_alias.erb
@@ -1,13 +1,9 @@
   location <%= location %> {
-<% if @custom_config_prepend -%>
-  <% custom_config_prepend.each do |key,value| -%>
+<% if @custom_config_prepend -%<% custom_config_prepend.each do |key,value| -%>
     <%= key %> <%= value %>;
-  <% end -%>
-<% end -%>
+<% end -%><% end -%>
     alias  <%= location_alias %>;
-<% if @custom_config_append -%>
-  <% custom_config_append.each do |key,value| -%>
+<% if @custom_config_append -%><% custom_config_append.each do |key,value| -%>
     <%= key %> <%= value %>;
-  <% end -%>
-<% end -%>
+<% end -%><% end -%>
   }
