--- a/templates/vhost/vhost_location_proxy.erb
+++ b/templates/vhost/vhost_location_proxy.erb
@@ -1,14 +1,10 @@
   location <%= location %> {
-<% if @custom_config_prepend -%>
-  <% custom_config_prepend.each do |key,value| -%>
+<% if @custom_config_prepend -%><% custom_config_prepend.each do |key,value| -%>
     <%= key %> <%= value %>;
-  <% end -%>
-<% end -%>
+<% end -%><% end -%>
     proxy_pass <%= proxy %>;
     proxy_read_timeout <%= proxy_read_timeout %>;
-<% if @custom_config_append -%>
-  <% custom_config_append.each do |key,value| -%>
+<% if @custom_config_append -%><% custom_config_append.each do |key,value| -%>
     <%= key %> <%= value %>;
-  <% end -%>
-<% end -%>
+<% end -%><% end -%>
   }
