Added support for custom configs

--- a/templates/vhost/vhost_location_stub_status.erb
+++ b/templates/vhost/vhost_location_stub_status.erb
@@ -1,9 +1,9 @@
   location <%= location %> {
-<% if @custom_config_prepend -%><% custom_config_prepend.each do |key,value| -%>
+<% if @location_cfg_prepend -%><% location_cfg_prepend.each do |key,value| -%>
     <%= key %> <%= value %>;
 <% end -%><% end -%>
     stub_status on;
-<% if @custom_config_append -%><% custom_config_append.each do |key,value| -%>
+<% if @location_cfg_append -%><% location_cfg_append.each do |key,value| -%>
     <%= key %> <%= value %>;
 <% end -%><% end -%>
   }
