--- a/templates/vhost/vhost_location_directory.erb
+++ b/templates/vhost/vhost_location_directory.erb
@@ -1,10 +1,10 @@
   location <%= location %> {
-<% if @custom_config_prepend -%><% custom_config_prepend.each do |key,value| -%>
+<% if @location_cfg_prepend -%><% location_cfg_prepend.each do |key,value| -%>
     <%= key %> <%= value %>;
 <% end -%><% end -%>
     root  <%= www_root %>;
     index <% index_files.each do |i| %> <%= i %> <% end %>; 
-<% if @custom_config_append -%><% custom_config_append.each do |key,value| -%>
+<% if @location_cfg_append -%><% location_cfg_append.each do |key,value| -%>
     <%= key %> <%= value %>;
 <% end -%><% end -%>
   }
