Added extra_directives option to vhost resource

--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -9,3 +9,7 @@ server {
   <% if @charset -%>
   charset                <%= charset %>;
   <% end -%>
+  if <% @extra_directives -%>
+  <% extra_directives.each do |i| %> <%= i %>; <% end %>
+  <% end -%>
+  
