--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -9,7 +9,7 @@ server {
   <% if @charset -%>
   charset                <%= charset %>;
   <% end -%>
-  if <% @extra_directives -%>
+  <% if @extra_directives -%>
   <% extra_directives.each do |i| %> <%= i %>; <% end %>
-  <% end -%>
+  <% end %>
   
