Better formatting on templates for access_logs & error_log

--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -8,7 +8,8 @@ server {
   <% if ! @access_logs %>
   access_log            <%= scope.lookupvar('nginx::params::nx_logdir')%>/<%= name %>.access.log; 
   <% else %>
-  <% access_logs.sort.each do |logfile,logformat| %>access_log <%= scope.lookupvar('nginx::params::nx_logdir')%>/<%= logfile %>.access.log <%= logformat %>; <% end %>
+  <% access_logs.sort.each do |logfile,logformat| %>
+  access_log            <%= scope.lookupvar('nginx::params::nx_logdir')%>/<%= logfile %>.access.log <%= logformat %>; <% end %>
   <% end -%>
   <% if @error_log -%>
   error_log             <%= scope.lookupvar('nginx::params::nx_logdir')%>/<%= name %>.error.log;
