Better formatting on templates for access_logs & error_log

--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -9,10 +9,9 @@ server {
   access_log            <%= scope.lookupvar('nginx::params::nx_logdir')%>/<%= name %>.access.log; 
   <% else %>
   <% access_logs.sort.each do |logfile,logformat| %>
-  access_log            <%= scope.lookupvar('nginx::params::nx_logdir')%>/<%= logfile %>.access.log <%= logformat %>;
+  access_log            <%= scope.lookupvar('nginx::params::nx_logdir')%>/<%= logfile %>.access.log <%= logformat %>;<% end -%>
   <% end -%>
-  <% end -%>
-  <% if @error_log -%>
+  <% if @error_log %>
   error_log             <%= scope.lookupvar('nginx::params::nx_logdir')%>/<%= name %>.error.log;
   <% end -%>
   <% if @charset -%>
