Moved location_cfg_append & location_cfg_prepend from hashtype to array to allow repeat directives

--- a/templates/vhost/vhost_location_directory.erb
+++ b/templates/vhost/vhost_location_directory.erb
@@ -1,10 +1,10 @@
   location <%= location %> {
-<% if @location_cfg_prepend -%><% location_cfg_prepend.sort.each do |key,value| -%>
-    <%= key %> <%= value %>;
+<% if @location_cfg_prepend -%><% location_cfg_prepend.each do |i| -%>
+    <%= i %>;
 <% end -%><% end -%>
     root  <%= www_root %>;
     index <% index_files.each do |i| %> <%= i %> <% end %>; 
-<% if @location_cfg_append -%><% location_cfg_append.sort.each do |key,value| -%>
-    <%= key %> <%= value %>;
+<% if @location_cfg_append -%><% location_cfg_append.each do |i| -%>
+    <%= i %>;
 <% end -%><% end -%>
   }
