--- a/templates/conf.d/proxy.conf.erb
+++ b/templates/conf.d/proxy.conf.erb
@@ -9,8 +9,8 @@ proxy_buffers           <%= scope.lookupvar('nginx::params::nx_proxy_buffers') %
 proxy_set_header        <%= header %>;
 <% end %>
 <% if @geoip_city_src %>
-proxy_set_header HTTP_GEOIP_CITY_COUNTRY_CODE $geoip_city_country_code;
-proxy_set_header HTTP_GEOIP_CITY_COUNTRY_NAME $geoip_city_country_name;
-proxy_set_header HTTP_GEOIP_REGION $geoip_region;
-proxy_set_header HTTP_GEOIP_CITY $geoip_city;
+proxy_set_header Geo-Country-Code $geoip_city_country_code;
+proxy_set_header Geo-Country-Name $geoip_city_country_name;
+proxy_set_header Geo-City-Region $geoip_region;
+proxy_set_header Geo-City $geoip_city;
 <% end %>
