Changed geoip header names to avoid using variable names

--- a/templates/conf.d/proxy.conf.erb
+++ b/templates/conf.d/proxy.conf.erb
@@ -11,6 +11,6 @@ proxy_set_header        <%= header %>;
 <% if @geoip_city_src %>
 proxy_set_header Geo-Country-Code $geoip_city_country_code;
 proxy_set_header Geo-Country-Name $geoip_city_country_name;
-proxy_set_header Geo-City-Region $geoip_region;
+proxy_set_header Geo-Region $geoip_region;
 proxy_set_header Geo-City $geoip_city;
 <% end %>
