--- a/templates/vhost/vhost_location_fpm.erb
+++ b/templates/vhost/vhost_location_fpm.erb
@@ -21,10 +21,10 @@
     fastcgi_param SCRIPT_NAME $script;
     fastcgi_param PATH_INFO $path_info;
     <% if @geoip_enable %>
-    fastcgi_param HTTP_GEOIP_CITY_COUNTRY_CODE $geoip_city_country_code;
-    fastcgi_param HTTP_GEOIP_CITY_COUNTRY_NAME $geoip_city_country_name;
-    fastcgi_param HTTP_GEOIP_REGION $geoip_region;
-    fastcgi_param HTTP_GEOIP_CITY $geoip_city;
+    fastcgi_param HTTP_GEO_COUNTRY_CODE $geoip_city_country_code;
+    fastcgi_param HTTP_GEO_COUNTRY_NAME $geoip_city_country_name;
+    fastcgi_param HTTP_GEO_REGION $geoip_region;
+    fastcgi_param HTTP_GEO_CITY $geoip_city;
     <% end %>
 
     fastcgi_pass <%= fpm %>;
