Fix on fpm locations

--- a/templates/vhost/vhost_location_fpm.erb
+++ b/templates/vhost/vhost_location_fpm.erb
@@ -1,4 +1,4 @@
-  location ~ "<%= location %>" {
+  location <%= location %> {
 <% if @location_cfg_prepend -%><% location_cfg_prepend.each do |i| -%>
     <%= i %>;
 <% end -%><% end -%>
