--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -34,10 +34,9 @@ http {
   <% end -%>
 
   <% if @real_ip_header %>
-  real_ip_header     <% real_ip_header;
+  real_ip_header     <%= real_ip_header %>;
   <% end %>
-  <% if @real_ips %>
-  <% real_ips.each do |ip| -%> 
+  <% if @real_ips %><% real_ips.each do |ip| -%> 
   set_real_ip_from   <%= ip %>;
   <% end %>
   include /etc/nginx/conf.d/*.conf;
