--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -38,7 +38,7 @@ http {
   <% end %>
   <% if @real_ips %><% real_ips.each do |ip| -%> 
   set_real_ip_from   <%= ip %>;
-  <% end %>
+  <% end %><% end %>
   include /etc/nginx/conf.d/*.conf;
   include /etc/nginx/vhost_autogen.conf;
 }
