--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -35,10 +35,10 @@ http {
 
   <% if @real_ip_header %>
   real_ip_header     <%= real_ip_header %>;
-  <% end %>
+  <% end -%>
   <% if @real_ips %><% real_ips.each do |ip| -%> 
-  set_real_ip_from   <%= ip %>;
-  <% end %><% end %>
+  set_real_ip_from   <%= ip %>;<% end %>
+  <% end %>
   include /etc/nginx/conf.d/*.conf;
   include /etc/nginx/vhost_autogen.conf;
 }
