--- a/templates/conf.d/proxy.conf.erb
+++ b/templates/conf.d/proxy.conf.erb
@@ -5,6 +5,7 @@ proxy_connect_timeout   <%= proxy_connect_timeout %>;
 proxy_send_timeout      <%= proxy_send_timeout %>;
 proxy_read_timeout      <%= proxy_read_timeout %>;
 proxy_buffers           <%= proxy_buffers %>;
+<% if @proxy_buffer_size %>proxy_buffer_size       <%= proxy_buffer_size %><% end %>
 <% proxy_set_header.each do |header| %>
 proxy_set_header        <%= header %>;
 <% end %>
