--- a/templates/conf.d/proxy.conf.erb
+++ b/templates/conf.d/proxy.conf.erb
@@ -6,6 +6,7 @@ proxy_send_timeout      <%= proxy_send_timeout %>;
 proxy_read_timeout      <%= proxy_read_timeout %>;
 proxy_buffers           <%= proxy_buffers %>;
 <% if @proxy_buffer_size %>proxy_buffer_size       <%= proxy_buffer_size %><% end %>
+<% if @proxy_ignore_headers %>proxy_ignore_headers    <% proxy_ignore_headers.each do |ignore_header| %> <%= ignore_header %><% end -%>;<% end %>
 <% proxy_set_header.each do |header| %>
 proxy_set_header        <%= header %>;
 <% end %>
