Added proxy_ignore_headers support

--- a/templates/conf.d/proxy.conf.erb
+++ b/templates/conf.d/proxy.conf.erb
@@ -8,6 +8,7 @@ proxy_buffers           <%= proxy_buffers %>;
 <% if @proxy_buffer_size %>proxy_buffer_size       <%= proxy_buffer_size %><% end %>
 <% if @proxy_ignore_headers %>proxy_ignore_headers    <% proxy_ignore_headers.each do |ignore_header| %> <%= ignore_header %><% end -%>;<% end %>
 <% if @proxy_temp_file_write_size %>proxy_temp_file_write_size       <%= proxy_temp_file_write_size %><% end %>
+<% if @proxy_busy_buffers_size %>proxy_busy_buffers_size <%= proxy_busy_buffers_size %><% end %>
 <% proxy_set_header.each do |header| %>
 proxy_set_header        <%= header %>;
 <% end %>
