--- a/templates/conf.d/proxy.conf.erb
+++ b/templates/conf.d/proxy.conf.erb
@@ -5,10 +5,10 @@ proxy_connect_timeout   <%= proxy_connect_timeout %>;
 proxy_send_timeout      <%= proxy_send_timeout %>;
 proxy_read_timeout      <%= proxy_read_timeout %>;
 proxy_buffers           <%= proxy_buffers %>;
-<% if @proxy_buffer_size %>proxy_buffer_size       <%= proxy_buffer_size %><% end %>
-<% if @proxy_ignore_headers %>proxy_ignore_headers    <% proxy_ignore_headers.each do |ignore_header| %> <%= ignore_header %><% end -%>;<% end %>
-<% if @proxy_temp_file_write_size %>proxy_temp_file_write_size       <%= proxy_temp_file_write_size %><% end %>
-<% if @proxy_busy_buffers_size %>proxy_busy_buffers_size <%= proxy_busy_buffers_size %><% end %>
+<% if @proxy_buffer_size %>proxy_buffer_size       <%= proxy_buffer_size %><% end -%>
+<% if @proxy_ignore_headers %>proxy_ignore_headers    <% proxy_ignore_headers.each do |ignore_header| %> <%= ignore_header %><% end -%>;<% end -%>
+<% if @proxy_temp_file_write_size %>proxy_temp_file_write_size       <%= proxy_temp_file_write_size %>;<% end -%>
+<% if @proxy_busy_buffers_size %>proxy_busy_buffers_size <%= proxy_busy_buffers_size %>;<% end -%>
 <% proxy_set_header.each do |header| %>
 proxy_set_header        <%= header %>;
 <% end %>
