--- a/templates/conf.d/proxy.conf.erb
+++ b/templates/conf.d/proxy.conf.erb
@@ -9,9 +9,7 @@ proxy_buffers           <%= proxy_buffers %>;
 <% if @proxy_ignore_headers %>proxy_ignore_headers    <% proxy_ignore_headers.each do |ignore_header| %> <%= ignore_header %><% end -%>;<% end -%>
 <% if @proxy_temp_file_write_size %>proxy_temp_file_write_size       <%= proxy_temp_file_write_size %>;<% end -%>
 <% if @proxy_busy_buffers_size %>proxy_busy_buffers_size <%= proxy_busy_buffers_size %>;<% end -%>
-<% proxy_set_header.each do |header| %>
-proxy_set_header        <%= header %>;
-<% end -%>
+<% proxy_set_header.each do |header| %>proxy_set_header        <%= header %>;<% end %>
 <% if @geoip_city_src %>
 proxy_set_header Geo-Country-Code $geoip_city_country_code;
 proxy_set_header Geo-Country-Name $geoip_city_country_name;
