--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -21,7 +21,7 @@ http {
   tcp_nopush  on;
   <% end %>
 
-  keepalive_timeout  <%= scope.lookupvar('nginx::params::nx_keepalive_timeout')%>;
+  keepalive_timeout  <%= keepalive_timeout %>;
   tcp_nodelay        <%= scope.lookupvar('nginx::params::nx_tcp_nodelay')%>;
 
   <% if scope.lookupvar('nginx::params::nx_gzip') == 'on' %> 
