Added proxy_ignore_headers support

--- a/templates/conf.d/upstream.erb
+++ b/templates/conf.d/upstream.erb
@@ -1,6 +1,7 @@
 upstream <%= name %> {
-  <% if @fair_enabled %>fair;<% end -%>
-  <% members.each do |i| %>
+<% if @fair_enabled %>fair;<% end -%>
+<% members.each do |i| %>
   server <%= i %>;
-  <% end %>
+<% end %>
+<% if @keepalive %>  keepalive <%= keepalive %>;<% end %>
 }
