--- a/templates/vhost/vhost_location_proxy.erb
+++ b/templates/vhost/vhost_location_proxy.erb
@@ -2,8 +2,12 @@
 <% if @location_cfg_prepend -%><% location_cfg_prepend.each do |i| -%>
     <%= i %>;
 <% end -%><% end -%>
-    proxy_pass <%= proxy %>;
+<% if @proxy_cache %>    proxy_cache <%= proxy_cache %>;<% end %>
+<% if @proxy_cache_valid %><% proxy_cache_valid.each do |i| -%>
+    proxy_cache_valid <%= i %>;
+<% end -%><% end -%>
     proxy_read_timeout <%= proxy_read_timeout %>;
+    proxy_pass <%= proxy %>;
 <% if @location_cfg_append -%><% location_cfg_append.each do |i| -%>
     <%= i %>;
 <% end -%><% end -%>
