Added proxy_cache && proxy_cache_valid support to locations

--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -17,3 +17,6 @@ server {
   <% if @charset -%>
   charset                <%= charset %>;
   <% end %>
+<% if @vhost_cfg_prepend -%><% vhost_cfg_prepend.each do |i| -%>
+  <%= i %>;
+<% end -%><% end -%>
