--- a/templates/vhost/vhost_location_proxy.erb
+++ b/templates/vhost/vhost_location_proxy.erb
@@ -3,6 +3,7 @@
     <%= i %>;
 <% end -%><% end -%>
 <% if @proxy_cache %>    proxy_cache <%= proxy_cache %>;<% end %>
+<% if @proxy_cache_key %>    proxy_cache_key <%= proxy_cache_key %>;<% end %>
 <% if @proxy_cache_valid %><% proxy_cache_valid.each do |i| -%>
     proxy_cache_valid <%= i %>;
 <% end -%><% end -%>
