--- a/templates/vhost/vhost_location_proxy.erb
+++ b/templates/vhost/vhost_location_proxy.erb
@@ -4,7 +4,7 @@
 <% end -%><% end -%>
 <% if @proxy_cache %>    proxy_cache <%= proxy_cache %>;
 <% end -%>
-<% if @proxy_no_cache %>    proxy_no_cache <%= proxy_no_cache %>;
+<% if @proxy_cache_bypass %>    proxy_cache_bypass <%= proxy_cache_bypass %>;
 <% end -%>
 <% if @proxy_ignore_headers %>    proxy_ignore_headers<% proxy_ignore_headers.each do |i| -%> <%= i %><% end -%>;
 <% end -%>
