--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -28,7 +28,7 @@ http {
   gzip         on;
   gzip_proxied any;
   gzip_disable "MSIE [1-6]\.(?!.*SV1)";
-  gzip_types   "text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript application/javascript image/svg+xml";
+  gzip_types   text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript application/javascript image/svg+xml;
   gzip_vary    on;
   <% end %>
 
