--- a/templates/vhost/vhost_ssl_header.erb
+++ b/templates/vhost/vhost_ssl_header.erb
@@ -2,6 +2,15 @@ server {
   listen       443;
   <% if ipv6_enable == 'true' && (defined? ipaddress6) %>listen [<%= ipv6_listen_ip %>]:<%= ipv6_listen_port %> default ipv6only=on;<% end %>
   server_name  <%= name %>;
+  <% if ! @access_logs %>
+  access_log            <%= scope.lookupvar('nginx::params::nx_logdir')%>/ssl-<%= name %>.access.log;
+  <% else %>
+  <% access_logs.sort.each do |logfile,logformat| %>
+  access_log            <%= scope.lookupvar('nginx::params::nx_logdir')%>/<%= logfile %>.access.log <%= logformat %>;<% end -%>
+  <% end -%>
+  <% if @error_log %>
+  error_log             <%= scope.lookupvar('nginx::params::nx_logdir')%>/<%= name %>.error.log;
+  <% end -%>
 
   ssl on;
   ssl_certificate      <%= ssl_cert %>;
