--- a/templates/vhost/vhost_ssl_header.erb
+++ b/templates/vhost/vhost_ssl_header.erb
@@ -18,6 +18,6 @@ server {
 
   ssl_session_timeout  5m;
 
-  ssl_protocols  SSLv3 TLSv1;
+  ssl_protocols  TLSv1 TLSv2 TLSv3;
   ssl_ciphers  ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv3:+EXP;
   ssl_prefer_server_ciphers   on;
